optimize code mirroring